# cudaMallocManage_demo

./: CMakeLists.txt  README.md  class_A.cu  class_A.h  class_B.cu  class_B.h  main.cpp
